# life

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PAPER.md
examples/: basic_usage.py  genesis.py  langchain_integration.py  multi_agent_network.py  vibe_communication.py
scripts/: quickstart.py
src/life/: __init__.py  context.py  core.py  dna.py  genesis.py  homeostasis.py  hormones.py  immune.py  nervous.py  observation.py  vibe.py
tests/: test_life.py
